# wasdf

./: .gitignore  Cargo.toml  Claude.md  README.md
crates/wasdf/: Cargo.toml
crates/wasdf-example-ext/: Cargo.toml  example.scm
crates/wasdf-example-ext/src/: cursor.scm  greet.scm  lib.rs  step.scm
crates/wasdf-sdk/: Cargo.toml
crates/wasdf-sdk/src/: chunk.rs  format.rs  lib.rs  magic.rs  mime.rs
crates/wasdf/src/: app.rs  core.rs  exec.rs  extension.rs  fs.rs  main.rs  runtime.rs  script.rs  services.rs  ui.rs
crates/wasdf/src/app/: command.scm  event_loop.rs  kernel.rs  keymap.scm  resolver.scm  terminal.rs
crates/wasdf/src/core/: event.rs  extension_value.rs  intent.rs  mode.rs  reducer.rs  state.rs
crates/wasdf/src/exec/: executor.rs  options.rs
crates/wasdf/src/extension/: archive.rs  loader.rs  preview.rs  preview_keymap.scm  registry.rs
crates/wasdf/src/extension/preview/: decode.rs  highlight.rs  search.rs
crates/wasdf/src/fs/: read_dir.rs
crates/wasdf/src/runtime/: task.rs
crates/wasdf/src/script/: codec.rs  condition.rs  config.rs  keymap.rs  session.rs  sexpr.rs
crates/wasdf/src/services/: command.rs  matcher.rs  resolver.rs
crates/wasdf/src/ui/: bottom.rs  chrome.rs  content.rs  manager.rs  middle.rs  render.rs  top.rs
doc/: ARCHITECTURE.md  EXTENSION.md  SCHEME.md  UI.md
