[workspace]
resolver = "3"
members = ["crates/wasdf", "crates/wasdf-sdk", "crates/wasdf-example-ext"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.95"
repository = "https://github.com/szk/wasdf"
homepage = "https://github.com/szk/wasdf"


[workspace.dependencies]
ratatui = "0.30"
crossterm = "0.29"
fuzzy-matcher = "0.3"
