[package]
name = "wasdf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "A keyboard-only TUI file manager built around WASD/hjkl navigation for mini-keyboards."
readme = "../../README.md"
keywords = ["tui", "file-manager", "ratatui", "terminal", "wasd"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "wasdf"
path = "src/main.rs"

[dependencies]
wasdf-sdk = { path = "../wasdf-sdk", version = "0.2.0" }
ratatui = { workspace = true, features = ["crossterm"] }
crossterm = { workspace = true }
fuzzy-matcher = { workspace = true }
steel-core = "0.8"
libloading = "0.8"
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
chafa-syms-rs = "0.1"
# Syntax highlighting for text previews. fancy-regex backend keeps it pure Rust
# (no onig/C dependency); bundles the default syntax + theme sets.
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

